--- a/ngayTrongThang.html
+++ b/ngayTrongThang.html
@@ -5,13 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-<form action="/action_page.php">
-    tháng 1 có 31 ngày <br>
-    <input type="number" id="fname" name="fname">
-    <input type="submit" value="tính số ngày"><br>
-    tháng 2 có 28 hoặc 29 ngày <br>
-    <input type="number" id="lname" name="lname">
-    <input type="submit" value="tính số ngày">
-</form>
+<h1>kiểm tra số ngày trong tháng</h1>
+<input type="number" id="month">
+<button onclick="manh()">nhập</button>
+<script src="ngayTrongThang.js"></script>
+<p id="thang"></p>
 </body>
 </html>
