--- a/good.html
+++ b/good.html
@@ -68,21 +68,20 @@
     }
 </style>
 <body>
-
+good <br>
 <label class="switch">
     <input type="checkbox">
     <span class="slider round"></span>
 </label> <br>
-
+cheap <br>
 <label class="switch">
     <input type="checkbox" checked>
     <span class="slider round"></span>
 </label> <br>
-
+fast <br>
 <label class="switch">
     <input type="checkbox" checked>
     <span class="slider round"></span>
 </label>
-<input onclick="nut()">
 </body>
 </html>
