--- a/nhap3SoGTLonNhat.html
+++ b/nhap3SoGTLonNhat.html
@@ -13,7 +13,7 @@
         document.write("số lớn nhất là :" + a);
     }else if (b>a && b >c){
         document.write("số lớn nhất là :" + b);
-    }else if (c>a && c>b){
+    }else{
         document.write("số lớn nhất là :" + c);
     }
 </script>
